# geometry

./: .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE  README.md
include/gillwald/: geometry.hpp
src/: geometry.cpp
test/: geometry_tests.cpp
